--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-<h1>Hello!</h1>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <title>Vivian Liu</title>
+ 
+</head>
+
+<body>
+    <div class="site-container">
+        <div class="nav-container">
+            <ul class="nav nav-tabs">
+                <li><a href="home">Home</a>
+                </li>
+                <li><a href="portfolio">Portfolio</a></li>
+                <li><a href="about">About</a>
+                </li>
+                <li><a href="connect">Connect</a>
+                </li>
+            </ul>
+        </div>
+        <div class="footer">
+            <div class="footer-text">Designed by Vivian Jiawen Liu
+            </div>
+        </div>
+    </div>
+
+</body>
+
+</html>
