--- a/projects/captain-plants.html
+++ b/projects/captain-plants.html
@@ -23,6 +23,24 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.png" rel="apple-touch-icon">
+<script>
+// anchor stuff
+window.onload = function () {
+  function offsetAnchor() {
+    if (location.hash.length !== 0) {
+      window.scrollTo(window.scrollX, window.scrollY - 100);
+    }
+  }
+
+  // This will capture hash changes while on the page
+  window.addEventListener("hashchange", offsetAnchor);
+
+  // This is here so that when you enter the page with a hash,
+  // it can provide the offset in that case too. Having a timeout
+  // seems necessary to allow the browser to jump to the anchor first.
+  window.setTimeout(offsetAnchor, 1); // The delay of 1 is arbitrary and m
+};
+</script>
 </head>
 <body class="body">
   <div class="page-wrapper">
@@ -209,7 +227,7 @@ body:hover .cursor {
               </div>
               <div class="content-gap"></div>
               <div class="mainbutton">
-                <a href="#" id="link_skiptodesign" class="main-contentbutton w-inline-block">
+                <a href="#design" id="link_skiptodesign" class="main-contentbutton w-inline-block">
                   <div class="two-column-text-container is--main-contentbutton"><img src="../images/button-arrow-right.png" loading="lazy" alt="" class="main-button_icon">
                     <p class="_12px is--maincontentbutton">SKIP TO DESIGN OUTCOMES</p>
                   </div>
