--- a/projects/uw-food-services.html
+++ b/projects/uw-food-services.html
@@ -23,24 +23,6 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.png" rel="apple-touch-icon">
-<script>
-// anchor stuff
-window.onload = function () {
-  function offsetAnchor() {
-    if (location.hash.length !== 0) {
-      window.scrollTo(window.scrollX, window.scrollY - 100);
-    }
-  }
-
-  // This will capture hash changes while on the page
-  window.addEventListener("hashchange", offsetAnchor);
-
-  // This is here so that when you enter the page with a hash,
-  // it can provide the offset in that case too. Having a timeout
-  // seems necessary to allow the browser to jump to the anchor first.
-  window.setTimeout(offsetAnchor, 1); // The delay of 1 is arbitrary and m
-};
-</script>
 </head>
 <body class="body">
   <div class="page-wrapper">
@@ -263,7 +245,7 @@ body:hover .cursor {
                   <p class="content-linktext">Styleguide</p>
                 </a>
                 <p class="_12px-p is--contentnav">Part 03: Design</p>
-                <a id="link-design" href="#design" class="two-column-text-container is--contentnav-link w-inline-block"><img src="../images/button-arrow-right.png" loading="lazy" alt="" class="content-nav-icon">
+                <a id="link-design" href="https://vjliu.github.io/vivianliu/projects/uw-food-services.html#design" class="two-column-text-container is--contentnav-link w-inline-block"><img src="../images/button-arrow-right.png" loading="lazy" alt="" class="content-nav-icon">
                   <p class="content-linktext">Design Outcomes</p>
                 </a>
                 <a id="link-reflection" href="#reflection" class="two-column-text-container is--contentnav-link w-inline-block"><img src="../images/button-arrow-right.png" loading="lazy" alt="" class="content-nav-icon">
