--- a/projects/uw-food-services.html
+++ b/projects/uw-food-services.html
@@ -209,7 +209,7 @@ body:hover .cursor {
               </div>
               <div class="content-gap"></div>
               <div class="mainbutton">
-                <a href="#design" id="link_skiptodesign" class="main-contentbutton w-inline-block">
+                <a href="https://vjliu.github.io/vivianliu/projects/uw-food-services.html#design" id="link_skiptodesign" class="main-contentbutton w-inline-block">
                   <div class="two-column-text-container is--main-contentbutton"><img src="../images/button-arrow-right.png" loading="lazy" alt="" class="main-button_icon">
                     <p class="_12px is--maincontentbutton">SKIP TO DESIGN OUTCOMES</p>
                   </div>
@@ -245,7 +245,7 @@ body:hover .cursor {
                   <p class="content-linktext">Styleguide</p>
                 </a>
                 <p class="_12px-p is--contentnav">Part 03: Design</p>
-                <a id="link-design" href="https://vjliu.github.io/vivianliu/projects/uw-food-services.html#design" class="two-column-text-container is--contentnav-link w-inline-block"><img src="../images/button-arrow-right.png" loading="lazy" alt="" class="content-nav-icon">
+                <a id="link-design" href="#design" class="two-column-text-container is--contentnav-link w-inline-block"><img src="../images/button-arrow-right.png" loading="lazy" alt="" class="content-nav-icon">
                   <p class="content-linktext">Design Outcomes</p>
                 </a>
                 <a id="link-reflection" href="#reflection" class="two-column-text-container is--contentnav-link w-inline-block"><img src="../images/button-arrow-right.png" loading="lazy" alt="" class="content-nav-icon">
