--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Mon Jul 11 2022 16:04:36 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Tue Jul 12 2022 16:57:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="62168b7a1faba5454f707f9a" data-wf-site="62168b7a1faba51449707f98" lang="en">
 <head>
   <meta charset="utf-8">
@@ -244,6 +244,20 @@ body:hover .cursor {
                   <p class="thin is--showcase_text2">UberHOME, 2019</p>
                 </div>
                 <p class="_12px-p is--showcase_text2">Hypothetical IKEA partnership for Uber to <strong>increase ridership, driver partners, and competitiveness</strong> in the rideshare industry.</p>
+              </a>
+            </div>
+            <div class="grid-item is--showcase">
+              <a href="projects/usoc.html" target="_blank" class="link w-inline-block">
+                <div class="home-showcase-outline"><img src="images/thumbnail-6.jpg" loading="lazy" srcset="images/thumbnail-6.jpg 500w, images/thumbnail-6.jpg 800w, images/thumbnail-6.jpg 1080w, images/thumbnail-6.jpg 1195w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 42vw, 384.9132080078125px" alt="" class="home-showcase-img"></div>
+                <div class="two-column-text-container is--showcase_text-container1">
+                  <p class="_12px is--showcase_text1">RESEARCH</p>
+                  <h5>Case Study</h5>
+                </div>
+                <div class="two-column-text-container">
+                  <div class="dash"></div>
+                  <p class="thin is--showcase_text2">USOC, 2018</p>
+                </div>
+                <p class="_12px-p is--showcase_text2">Market &amp; user research methods to <strong>identify opportunities and design solutions</strong> for a unified platform for common student needs.</p>
               </a>
             </div>
           </div>
