--- a/projects/usoc.html
+++ b/projects/usoc.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>USOC</title>
-  <meta content="[tbd]" name="description">
+  <meta content="Market & user research methods to identify opportunities and design solutions for a unified platform for common student needs." name="description">
   <meta content="USOC" property="og:title">
-  <meta content="[tbd]" property="og:description">
+  <meta content="Market & user research methods to identify opportunities and design solutions for a unified platform for common student needs." property="og:description">
   <meta content="USOC" property="twitter:title">
-  <meta content="[tbd]" property="twitter:description">
+  <meta content="Market & user research methods to identify opportunities and design solutions for a unified platform for common student needs." property="twitter:description">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -193,7 +193,7 @@ body:hover .cursor {
             <div class="grid-item is--content60">
               <div class="two-column-text-container">
                 <h3>USOC</h3>
-                <p class="usoc-header"> <span class="subtext-span">(u-sock)</span></p>
+                <p class="thin is--showcase_index">(u-sock)</p>
               </div>
               <p>A unified platform for common student needs including renting/subletting, carpooling, tutoring, and other group activities.</p>
               <div class="content-gap"></div>
